k8s/namespaces/postgres/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: postgres

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: postgres
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
