k8s/namespaces/postgres/01-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres
  namespace: postgres
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: postgres

spec:
  egress:
  - {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: postgres
    ports:
    - port: 5432
      protocol: TCP
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
  - Ingress
  - Egress
